# SistemasDistribuidosPracticas

1-servidor-eco/: Cargo.toml  README.md
1-servidor-eco/examples/: client.rs  server.rs
2-protocolo-cliente-servidor/: Cargo.toml
2-protocolo-cliente-servidor/examples/: client.rs  server.rs
3-invocacion-objetos-remotos/: Cargo.toml
3-invocacion-objetos-remotos/examples/: server.rs
4-protocolo-transacciones/: Cargo.toml  books.json
4-protocolo-transacciones/examples/: client.rs  server.rs
5-servicio-directorio/: Cargo.toml
5-servicio-directorio/examples/: client.rs  server.rs
