[package]
name = "invocacion-objetos-remotos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tungstenite = "0.20.0"
url = "2.4.1"

[[example]]
name = "client"

[[example]]
name = "server"
